--- a/search/templates/search.html
+++ b/search/templates/search.html
@@ -48,6 +48,8 @@
       border-bottom: 1px solid #ccc;
 
     }
+
+
     .sentence {
       font-size: 1.1em;
       margin-bottom: 10px;
@@ -92,6 +94,7 @@
       color: #766c6c;
     }
 
+   
     /* Emphasize the input field */
 
     .field {
@@ -163,15 +166,18 @@
 
 
 <ul class="results-list">
+  <form action="{{url_for('search_bp.submit')}}" method="POST">
   {% for query_result in results %}
-    <li class="result-item" style="background-color: {{colors[loop.index % 2]}}">
+    <a style="display: block; color: inherit; text-decoration: none; " href="{{url_for('view_bp.start', title=query_result.play, sentence=query_result.sentence)}}">
+    <li  class="result-item" style="background-color: {{colors[loop.index % 2]}}">
       <div class="sentence">{{ query_result.sentence }}</div>
       <small class="reference">
         <em>{{query_result.play}}</em>, Act {{query_result.act }}, Scene {{query_result.scene}}, Line {{query_result.sentence_index}}
-      </small>
-     
+      </small> 
     </li>
+  </a>    
   {% endfor %}
+  </form>
 </ul>
 </div>
 
